trying to fix settings button color on mobile

--- a/app/assets/stylesheets/styles/_buttons.scss
+++ b/app/assets/stylesheets/styles/_buttons.scss
@@ -11,3 +11,7 @@
   padding: 10px 20px;
   font-size: 17px;
 }
+
+.grey-button {
+  background-color: #DDDDDD;
+}
